# challenge

./: README.md  control.json  pyproject.toml  results.txt  results1.txt
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: control.baml  evidence.baml  generators.baml
data/independent-code-review/: control.json
data/independent-code-review/samples/daulets-sample/: audit_results.md  coverage_metrics.csv
data/independent-code-review/samples/sample-1/: audit_results.md  results.txt
data/independent-code-review/samples/sample-2/: audit_results.md  results.txt
src/: main.py
src/baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  runtime.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py  watchers.py
src/services/: control.py  sample.py
